--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -3,8 +3,12 @@ html {
 }
 
 body {
+  position: absolute;
+  top: 0;
+  left: 0;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   height: 100%;
+  width: 100%
 }
